# jetson-ffmpeg

./: CMakeLists.txt  NvBuffer.cpp  NvV4l2ElementPlane.cpp  NvV4l2ElementPlane.h  NvVideoConverter.cpp  NvVideoEncoder.cpp  nvmpi.h  nvmpi.pc.in  nvmpiJP4.pc.in  nvmpi_dec.cpp  nvmpi_enc.cpp
